@@ -30,13 +30,8 @@ public class BrandService {
         Page<Brand> brandPage = brandRepository.findByAllBrandKrOrBrandEnStartingWith(brandName, pageable);
 
         List<BrandSearchResDto> dtoList = brandPage.stream()
-                .map(data -> BrandSearchResDto.builder()
-                        .id(data.getId())
-                        .brandKr(data.getBrandKr())
-                        .brandEn(data.getBrandEn())
-                        .brandImgUrl(data.getBrandImgUrl())
-                        .build()
-                ).toList();
+                .map(BrandSearchResDto::of)
+                .toList();
 
         return PaginationResDto.<BrandSearchResDto>builder()
                 .hasNext(brandPage.hasNext())
@@ -49,40 +44,17 @@ public class BrandService {
 
     public List<BrandSearchResDto> findTopBrand() {
         return brandRepository.findTop10By().stream()
-                                            .map(data -> BrandSearchResDto.builder()
-                                                                            .id(data.getId())
-                                                                            .brandKr(data.getBrandKr())
-                                                                            .brandEn(data.getBrandEn())
-                                                                            .brandImgUrl(data.getBrandImgUrl())
-                                                                            .build()
-                                            ).collect(Collectors.toList());
+                                            .map(BrandSearchResDto::of
+                                            ).toList();
     }
 
     public List<RecentSelectBrandResDto> findRecentSelectBrand(User user) {
 
         List<RecentSelectBrand> recentSelectBrandList = recentSelectBrandRepository.getRecentSelectBrandTop20(user);
 
-        return recentSelectBrandList.stream().map(recentSelectBrand -> {
-            Long brandId;
-            String brandName;
-            String brandImgUrl;
-            String flag = recentSelectBrand.getBrand() != null ? "Y" :"N";
-            if(flag.equals("Y")){
-                brandId = recentSelectBrand.getBrand().getId();
-                brandName = recentSelectBrand.getBrand().getBrandKr();
-                brandImgUrl = recentSelectBrand.getBrand().getBrandImgUrl();
-            }else{
-                brandId = recentSelectBrand.getNewBrand().getId();
-                brandName = recentSelectBrand.getNewBrand().getBrandName();
-                brandImgUrl = null;
-            }
-            return RecentSelectBrandResDto.builder()
-                    .id(brandId)
-                    .brandName(brandName)
-                    .brandImgUrl(brandImgUrl)
-                    .flag(flag)
-                    .build();
-        }).toList();
+        return recentSelectBrandList.stream()
+                .map(RecentSelectBrandResDto::of)
+                .toList();
     }
 }
 
